force-app/main/default/objects/Account/fields/Actionnaire__c.field-meta.xml
<CustomField>
    <fullName>Actionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actionnaire</label>
    <type>Checkbox</type>
</CustomField>