force-app/main/default/objects/Account/fields/Autoris_modifier__c.field-meta.xml
<CustomField>
    <fullName>Autoris_modifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorisé à modifier</label>
    <type>Checkbox</type>
</CustomField>