force-app/main/default/objects/Account/fields/Budget_annuel_laboratoire__c.field-meta.xml
<CustomField>
    <fullName>Budget_annuel_laboratoire__c</fullName>
    <label>Budget annuel laboratoire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>