force-app/main/default/objects/Account/fields/Code_agence__c.field-meta.xml
<CustomField>
    <fullName>Code_agence__c</fullName>
    <label>Code agence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>