force-app/main/default/objects/Account/fields/Code_client__c.field-meta.xml
<CustomField>
    <fullName>Code_client__c</fullName>
    <label>Code client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>