force-app/main/default/objects/Account/fields/Code_pays__c.field-meta.xml
<CustomField>
    <fullName>Code_pays__c</fullName>
    <label>Code pays</label>
    <length>100</length>
    <type>Text</type>
</CustomField>