force-app/main/default/objects/Account/fields/Code_remise__c.field-meta.xml
<CustomField>
    <fullName>Code_remise__c</fullName>
    <label>Code remise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>