force-app/main/default/objects/Account/fields/Compte_bloque__c.field-meta.xml
<CustomField>
    <fullName>Compte_bloque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compte bloqué</label>
    <type>Checkbox</type>
</CustomField>