force-app/main/default/objects/Account/fields/Compte_parent__c.field-meta.xml
<CustomField>
    <fullName>Compte_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>