force-app/main/default/objects/Account/fields/Compte_Strategique__c.field-meta.xml
<CustomField>
    <fullName>Compte_Strategique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compte Stratégique</label>
    <type>Checkbox</type>
</CustomField>