force-app/main/default/objects/Account/fields/Date_Derniere_Visite__c.field-meta.xml
<CustomField>
    <fullName>Date_Derniere_Visite__c</fullName>
    <label>Date Derniere Visite</label>
    <type>Date</type>
</CustomField>