force-app/main/default/objects/Account/fields/Delai_moyen_de_paiement_jours__c.field-meta.xml
<CustomField>
    <fullName>Delai_moyen_de_paiement_jours__c</fullName>
    <label>Délai moyen de paiement (jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>