force-app/main/default/objects/Account/fields/Delais_de_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Delais_de_Paiement__c</fullName>
    <label>Délais de Paiement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>