force-app/main/default/objects/Account/fields/des_commandes_extranet__c.field-meta.xml
<CustomField>
    <fullName>des_commandes_extranet__c</fullName>
    <label>% des commandes extranet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>