force-app/main/default/objects/Account/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <label>Devise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>