force-app/main/default/objects/Account/fields/Encours_Client__c.field-meta.xml
<CustomField>
    <fullName>Encours_Client__c</fullName>
    <label>Encours Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>