force-app/main/default/objects/Account/fields/Escompte__c.field-meta.xml
<CustomField>
    <fullName>Escompte__c</fullName>
    <label>Escompte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>