force-app/main/default/objects/Account/fields/Id_Data_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Id_Data_Warehouse__c</fullName>
    <externalId>true</externalId>
    <label>Id Data Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>