force-app/main/default/objects/Account/fields/Leader_d_opinion__c.field-meta.xml
<CustomField>
    <fullName>Leader_d_opinion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leader d&#39;opinion</label>
    <type>Checkbox</type>
</CustomField>