force-app/main/default/objects/Account/fields/Logiciel__c.field-meta.xml
<CustomField>
    <fullName>Logiciel__c</fullName>
    <label>Logiciel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>