force-app/main/default/objects/Account/fields/Montant_global_des_contrats_signes__c.field-meta.xml
<CustomField>
    <fullName>Montant_global_des_contrats_signes__c</fullName>
    <label>Montant global des contrats signés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>