force-app/main/default/objects/Account/fields/Nombre_d_actions__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_actions__c</fullName>
    <label>Nombre d&#39;actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>