force-app/main/default/objects/Account/fields/Nombre_d_importateurs_distributeurs_c__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_importateurs_distributeurs_c__c</fullName>
    <label>Nombre_d_importateurs_distributeurs__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>