force-app/main/default/objects/Account/fields/Nombre_de_livraisons__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_livraisons__c</fullName>
    <label>Nombre de livraisons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>