force-app/main/default/objects/Account/fields/Plafond__c.field-meta.xml
<CustomField>
    <fullName>Plafond__c</fullName>
    <label>Plafond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>