force-app/main/default/objects/Account/fields/Potentiel__c.field-meta.xml
<CustomField>
    <fullName>Potentiel__c</fullName>
    <label>Potentiel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>