force-app/main/default/objects/Account/fields/Pourcentage_remise_sur_objectifs_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_remise_sur_objectifs_d_achat__c</fullName>
    <label>Pourcentage remise sur objectifs d&#39;achat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>