force-app/main/default/objects/Account/fields/R_O_Visites__c.field-meta.xml
<CustomField>
    <fullName>R_O_Visites__c</fullName>
    <label>R/O Visites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>