force-app/main/default/objects/Account/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>