force-app/main/default/objects/Account/fields/Sous_Unit_d_UGAC__c.field-meta.xml
<CustomField>
    <fullName>Sous_Unit_d_UGAC__c</fullName>
    <label>Sous-Unité d&#39;UGAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>