force-app/main/default/objects/Account/fields/Telemarketeur__c.field-meta.xml
<CustomField>
    <fullName>Telemarketeur__c</fullName>
    <label>Télémarketeur</label>
    <length>200</length>
    <type>Text</type>
</CustomField>