force-app/main/default/objects/Account/fields/Utilisation_du_plafond__c.field-meta.xml
<CustomField>
    <fullName>Utilisation_du_plafond__c</fullName>
    <label>Utilisation du plafond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>