force-app/main/default/objects/Account/fields/Visiteur_Pharmaceutique__c.field-meta.xml
<CustomField>
    <fullName>Visiteur_Pharmaceutique__c</fullName>
    <label>Visiteur Pharmaceutique</label>
    <length>100</length>
    <type>Text</type>
</CustomField>